// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dotted border-theme-neutral-300 false"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          arkx
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          %
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dotted border-theme-neutral-300 false"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          arkx
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          %
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-dotted border-theme-neutral-300 bg-theme-success-contrast"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gkiqPI"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          arkx
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          %
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        />
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm bxcsTZ"
              color="danger"
              data-testid="DelegateRow__toggle-1"
              type="button"
            >
              Unselect
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
